--- a/docs/webstyle.css
+++ b/docs/webstyle.css
@@ -4,7 +4,8 @@ background-color: /*BurlyWood*/ #F0F8FF;
 color: indigo; 
 /*font-family: arial, helvetica, sans-serif;*/
 
-font-family: "Times New Roman", Times, serif;
+
+font-family: 'Quicksand', sans-serif;
 }
 
 
