--- a/docs/newWebstyle.css
+++ b/docs/newWebstyle.css
@@ -338,6 +338,36 @@ div.video p {
     text-align: center;
 }
 
+div.presentation {
+display: flex;
+    justify-content: center;
+    background-image: linear-gradient(to top, beige, paleturquoise, beige);
+    padding-top: 2%;
+
+    margin-left: 2%;
+    margin-right: 2%;
+    border-radius: 15px;
+}
+
+div.slides {
+    align-content: center;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+div.slides p {
+    text-align:center;
+}
+
+iframe#KDHslides {
+    align-self:center;
+}
+
+div.embed-footer {
+    display:none;
+}
+
 
 
 
