--- a/docs/newWebstyle.css
+++ b/docs/newWebstyle.css
@@ -1,8 +1,35 @@
+:root{
+    font-size:16px;
+    font-family: 'Architects Daughter', cursive;
+    --bg-primary:antiquewhite;
+
+}
+
 body {
     font-family: 'Architects Daughter', cursive;
     background-color: antiquewhite;
     font-size: larger;
+    margin:0;
+    padding:0;
 }
+
+body::-webkit-scrollbar{
+    width:0.25rem;
+}
+
+body::-webkit-scrollbar-track{
+    background: #1e1e24
+}
+
+body::-webkit-scrollbar-thumb{
+    background: #358673;
+}
+
+main{
+    margin-left:10rem;
+
+}
+
 
 p {
     font-family: 'Neucha', cursive;
@@ -14,6 +41,7 @@ header {
     font-size: larger;
     /* display: flex;*/
     flex-direction: column;
+    margin:1vw;
 }
 
 .head {
@@ -21,33 +49,64 @@ header {
 
 }
 
-div.navbar {
-    display: flex;
+/* NAVBAR */
+
+
+nav{
+    width: 8rem;
+    height: 100vh;
+    position: fixed;
+    background-image:linear-gradient(to right, var(--darkCircle), var(--bigCircle), paleturquoise, beige);
+    top: 0;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
     justify-content: space-evenly;
-    align-content: center;
-    margin: auto;
-    text-align: center;
-    padding-left: 4%
-
+    transition:200ms ease;
 }
 
-div.navbar a {
-    background-image: linear-gradient(lightseagreen, lavender);
-    padding: 3px;
-    border-radius: 5px;
-    color: maroon;
-    transition: .3s;
+nav:hover{
+    width:15rem;
 }
 
-div.navbar a:hover {
-    opacity: .6;
-    color: midnightblue;
-    background-image: linear-gradient(lavender, lightseagreen)
+nav:hover .link-text{
+    display:contents;
+    
 }
+
+.nav-link{
+    display:flex;
+    align-items: center;
+    width:inherit;
+    height: 5rem;
+    color:#1e1e24;
+    text-decoration: none;
+}
+
+.nav-link svg{
+     min-width:7rem; 
+  margin-left:.3rem;
+  margin-right:.7rem;
+    position:sticky;
+    left:0;
+}
+
+.link-text{
+    display:none;
+    margin-left:1rem;
+}
+
+.link-text:hover{
+    text-shadow:1px 1px white;
+    text-decoration:underline;
+}
+
+/* FOOTER */
 
 footer {
     display: flex;
     justify-content: space-around;
+    margin-left:15rem;
 }
 
 footer div {
@@ -81,8 +140,8 @@ p.foot a:hover {
 
 .me img {
     margin: auto;
-    max-width: 20vw;
-    border-radius: 25px;
+    width: 30vw;
+    border-radius: 10px;
 }
 
 .bio {
@@ -105,17 +164,29 @@ p.foot a:hover {
 
 div.picWrap {
     display: flex;
-justify-content: center;
-margin: 2%;
+justify-content: space-evenly;
+margin: 2vw;
 flex-direction:row;
 
+
+}
+
+/* div.picWrap div{
+    width:50vw;
+} */
+
+div.picWrap div img{
+    width:35vw;
+    border-radius: 3px;
 }
 
 div.picRow {
     display: flex;
     flex-direction: column;
-
+    justify-content: space-evenly;
 }
+
+
 
 
 
@@ -126,8 +197,9 @@ div.picRow {
 
 
 section.courseCont {
-    display: flex;
+   display:grid;
     flex-direction: column;
+    
 }
 
 h1.heading {
@@ -153,10 +225,9 @@ div.animation {
     border-radius: 15px;
 }
 
-div.txt {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+div.section {
+    display: grid;
+    grid-template-columns: 40vw 40vw;
     align-content: center;
     justify-content: space-evenly;
     background-image: linear-gradient(to top, beige, paleturquoise, beige);
@@ -166,6 +237,8 @@ div.txt {
     margin-right: 2%;
     border-radius: 15px;
 }
+
+div.section figure
 
 div.threeD {
     background-image: linear-gradient(to top, beige, paleturquoise, beige);
@@ -186,53 +259,13 @@ div.img:hover {
 }
 
 img#blues {
-    width: 40vw;
+    width: 30vw;
 }
 
 img#ballot {
-    width: 40vw;
+    width: 30vw;
 }
 
-div.desc {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
-
-}
-
-div.descSect {
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
-    padding: 1%;
-
-}
-
-div.descSection {
-    margin: auto;
-    padding: 1%;
-    flex: 1;
-
-}
-
-div.descSection h3 {
-    text-align: center;
-}
-
-div.descSect h3 {
-    text-align: center;
-}
-
-div.descSect h4 {
-    text-align: center;
-}
-
-div.descSection p {
-    text-indent: 2em;
-    padding: 1%;
-}
 
 img.threeD {
     width: 30vw;
@@ -429,8 +462,26 @@ div.logoWrap p {
 
                     /* RESUME STYLE */
 
-div.resume {
+
+ div.resume {
     font-family:courier, fixed, monospace;
+    width:80vw;
+    margin-top:5vw;
+    margin-bottom:5vw;
+    margin-left: 2vw;
+    margin-right:2vw;
+
+    display:flex;
+    flex-direction:column;
+    
+}
+
+main#resume{
+    margin-left:18vw;
+}
+
+div.resume img{
+    width:90%;
 }
 
 div.resume i {
@@ -455,4 +506,140 @@ div#XP {
     padding-right:140px;
     padding-left:30px;
 }
+
+
+
+/* ANIMATED SVG */
+
+:root{
+    --dark-hair:#5E5546;
+    --brown-hair:#988364;
+    --blonde-hair:#CFC19C;
+    --body: #E8E8E8;
+    --face:#E4C89E;
+
+    --bigCircle:#73E0C6;
+    --darkCircle:#388678;
+    --lightCircle:#FFFACF;
+
+    --bulbHead: #f69a8b;
+
+    --outline:#2d4356;
+    --blackline: #626975;
+}
+
+#darkHair{
+    fill: var(--dark-hair);
+}
+#brownHairL, #brownHairR{
+    fill: var(--brown-hair)
+}
+#blondeHair{
+    fill: var(--blonde-hair)
+}
+
+#body{
+    fill: var(--body);
+}
+#face{
+    fill:var(--face);
+}
+
+#container{
+    fill: var(--bigCircle)
+}
+#darkCircle{
+    fill:var(--darkCircle)
+}
+#lightCircle{
+    fill:var(--lightCircle)
+}
+
+
+
+#darkCircle,
+#lightCircle,
+#container,
+#bulbHead,
+#lightbulb{
+    transition: all 1s ease;
+}
+
+svg#bio:hover #darkCircle{
+    /* transform:translate(50%, 25%); */
+    transform:translate(0%, 50%);
+  
+}
+
+svg#bio:hover #lightCircle{
+    /* transform:translate(-50%, -25%); */
+    transform: translateY(-50%);
+}
+
+svg#bio:hover #container{
+    fill:#358673;
+}
+
+/* 
+svg:hover #eyeL{
+    transform: scaleX(-2); 
+    transform-origin:center;
+} */
+
+
+/* COURSE WORK ICON */
+
+
+#bulbHead{
+    fill:var(--bulbHead)
+}
+
+#book{
+    fill:var(--outline)
+}
+
+.blackline{
+    fill:var(--outline);
+    /* color:#434647;
+    color:#2d4356 */
+
+}
+
+svg#schoolProj:hover #lightbulb{
+    transform:translateY(-4%)
+}
+
+#lightCircle{
+    transform-origin: center;
+}
+
+svg#schoolProj:hover #lightCircle{
+    transform:translateY(-60%);
+    opacity:.85;
+    transform:scale(-1);
+    
+}
+
+svg#schoolProj #container{
+    transform-origin:center;
+}
+svg#schoolProj:hover #container{
+    transform:translateY(17%);
+    fill: var(--darkCircle);
+    /* transform:scale(.8); */
+}
+
+svg#schoolProj #darkCircle{
+    transform-origin: center;
+}
+svg#schoolProj:hover #darkCircle{
+    fill:var(--bigCircle);
+    transform:scale(1.05);
+}
+
+svg#schoolProj:hover #bulbHead{
+    fill: #c56b6b;
+}
+/* green line: #5bbe88
+    white line: #dae8f0*/
 
