--- a/docs/newWebstyle.css
+++ b/docs/newWebstyle.css
@@ -470,18 +470,20 @@ div.logoWrap p {
     margin-bottom:5vw;
     margin-left: 2vw;
     margin-right:2vw;
-
+    align-items: center;
     display:flex;
     flex-direction:column;
     
 }
 
 main#resume{
-    margin-left:18vw;
+    margin-left:16vw;
+    
 }
 
 div.resume img{
     width:90%;
+    max-width:900px
 }
 
 div.resume i {
